# ya_courses

./: README.md
red_belt/: CMakeLists.txt  test_runner.h
red_belt/w1/: Deque.h  DequeTest.cpp  airline_ticket.h  logger.cpp  main.cpp  max_element_if.cpp  paginator.cpp  print_values.cpp  sort_by.cpp  table.cpp  test_runner.h  uniq_id.cpp  update_field.cpp
red_belt/w2/: express_route.cpp  hotel_book.cpp  learner.cpp  main.cpp  read_manager.cpp  sort_students.cpp
red_belt/w3/: linked_list.cpp  object_pool.cpp  simple_vector.cpp  simple_vector.h  swap_sort_copy.cpp
red_belt/w4/: airport_counter.cpp  airport_example.cpp  athlete_numbers.cpp  http_request.h  main.cpp  server_stats.cpp  stack_vector.cpp  stack_vector.h  stats.h  text_editor.cpp  translator.cpp
red_belt/w5/: async_example.cpp  concurrent_map.cpp  execution_example.cpp  explore_key_words.cpp  group_heavy_strings.cpp  josephus_permutation.cpp  main.cpp  matrix_sum.cpp  merge_sort_3.cpp  priority_collection_2.cpp  simple_vector.h  simple_vector_2.cpp  simple_vector_2.h  simple_vector_copy_assignment.cpp  split_into_sentences.cpp  synchronized.cpp
red_belt/w6/: main.cpp  search_server.cpp  search_server.h  synchronized.h  tmp.cpp
white_belt/: CMakeLists.txt  average_temperature.cpp  bus_route.cpp  factorial.cpp  function_example.cpp  map_to_set.cpp  monthly_cases.cpp  palindrom.cpp  queue_people.cpp
yellow_belt/: CMakeLists.txt  animal.cpp  average_temp.cpp  build_exp.cpp  change_firstlast_name.cpp  eval_exp_shunting_yard.cpp  figures.cpp  find_greater_elements.cpp  find_nearest_element.cpp  find_start_with_ch.cpp  gender_stat.cpp  get_ref.cpp  main.cpp  merge_sort1.cpp  merge_sort2.cpp  merge_sort_bench.cpp  notifier.cpp  permutations.cpp  print_vector_part.cpp  regions_base.cpp  remove_duplicates.cpp  split_into_words.cpp  sqr_template.cpp  task_tracker.cpp  template_print_collection.cpp  unit_test_example.cpp
yellow_belt/source_w6/: condition_parser.cpp  database.cpp  database.h  date.cpp  date.h  event.cpp  event.h  main.cpp  node.cpp  node.h  test_runner.cpp  test_runner.h  token.cpp  unit_tests.cpp  unit_tests.h
