cmake_minimum_required(VERSION 3.17)
project(red_belt)

set(CMAKE_CXX_STANDARD 17)

add_executable(red_belt
#        w1/main.cpp
#        w1/test_runner.h
#        w1/max_element_if.cpp
#        w1/logger.cpp
#        w1/airline_ticket.h
#        w1/sort_by.cpp
#        w1/update_field.cpp
#        w1/print_values.cpp
#        w1/uniq_id.cpp
#        w1/table.cpp
#        w1/Deque.h w1/DequeTest.cpp
#        w1/paginator.cpp
        w2/main.cpp)