cmake_minimum_required(VERSION 3.17)
project(white_belt)

set(CMAKE_CXX_STANDARD 17)

add_executable(white_belt
#        main.cpp
#        factorial.cpp
#        palindrom.cpp
#        average_temperature.cpp
#        queue_people.cpp
#        function_example.cpp
#        monthly_cases.cpp
#        map_to_set.cpp
        bus_route.cpp)
