cmake_minimum_required(VERSION 3.17)
project(yellow_belt)

set(CMAKE_CXX_STANDARD 14)

add_executable(yellow_belt
#        main.cpp
#        template_print_collection.cpp
#        average_temp.cpp
#        regions_base.cpp
#        task_tracker.cpp
#        sqr_template.cpp
#        get_ref.cpp
#        unit_test_example.cpp
#        print_vector_part.cpp
#        find_greater_elements.cpp
#        split_into_words.cpp
#        remove_duplicates.cpp
#        permutations.cpp
#        gender_stat.cpp
#        merge_sort1.cpp
#        merge_sort2.cpp
#        merge_sort_bench.cpp
#        find_nearest_element.cpp
#        change_firstlast_name.cpp
#        find_start_with_ch.cpp
#        build_exp.cpp
#        eval_exp_shunting_yard.cpp
#        animal.cpp
#        notifier.cpp
        figures.cpp)